# fanuc-hmi

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  config.yml  config_prod.yml  config_service.py  numeric_register_parser.py  robot_parser.py  robot_service.py  string_register_parser.py
app/domain/: numeric_register.py  string_register.py
app/mocks/: mock_string_response.py
app/static/: clock.js  keypress_and_clock.js  style.css
app/templates/: content.html  index.html  message.html  numeric_registers.html  registers.html  timer.html
src/: config.py  config.yml  logging_config.py  main.py  numeric_register_parser.py  robot_service.py  string_register_parser.py
src/mocks/: mock_numeric_response.py
src/static/: hmi.css  style.css
src/templates/: index.html  message.html  registers.html  timer.html
