[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "fanuc-hmi"
version = "1.0.0"
description = "Human-Machine Interface for FANUC robot monitoring and control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0.0",
    "structlog>=25.5.0",
]

[project.scripts]
fanuc-hmi = "src.main:run"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
